--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -3,7 +3,7 @@
 @import "footer";
 
 .feedback-page__title {
-  margin-top: 30px;
+  margin-top: 90px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
@@ -16,12 +16,15 @@
 }
 
 .feedback {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 40px;
 
   &-title {
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-cards {
@@ -31,6 +34,7 @@
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
+      margin-top: 20px;
     }
 
     .card-column {
@@ -89,32 +93,46 @@
 }
 
 .form-wrapper {
-  margin-top: 50px;
+  margin-top: 100px;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
+
+  @media screen and (max-width: 768px) {
+    margin-top: 50px;
+  }
 }
 
 .form {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 
   &-title {
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-input {
-    margin-top: 50px;
+    margin-top: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
+      margin-top: 50px;
     }
 
     &__name {
-      width: 400px;
+      width: 420px;
       height: 40px;
 
       @media screen and (max-width: 768px) {
@@ -151,6 +169,7 @@
       background: #fff;
       border: none;
       box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
+      font-size: 18px;
 
       &::placeholder {
         opacity: 0.7;
@@ -161,7 +180,7 @@
   &-comment {
     margin-top: 30px;
     width: 100%;
-    height: 100px;
+    height: 140px;
 
     textarea {
       width: 100%;
@@ -174,6 +193,7 @@
       outline: none;
       box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
       resize: none;
+      font-size: 18px;
 
       &::placeholder {
         opacity: 0.7;
@@ -183,7 +203,11 @@
 
   &-button {
     display: flex;
-    margin-top: 30px;
+    margin-top: 50px;
+
+    @media screen and (max-width: 500px) {
+      margin-top: 30px;
+    }
 
     @media screen and (max-width: 500px) {
       flex-direction: column;
@@ -193,7 +217,7 @@
       button {
         background: #f4c93f;
         border-radius: 10px;
-        padding: 15px 25px;
+        padding: 10px 25px;
         border: none;
         font-weight: 500;
         font-size: 16px;
@@ -211,7 +235,7 @@
       line-height: 20px;
       border: 2px solid #000;
       margin: 0 0 0 20px;
-      padding: 9px 20px;
+      padding: 5px 20px;
 
       @media screen and (max-width: 500px) {
         margin-top: 20px;
@@ -234,16 +258,30 @@
 }
 
 .licenses {
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 85px;
+
+  @media screen and (max-width: 768px) {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 
   &-title {
-    font-size: 25px;
+    font-size: 36px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-content {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 100px;
+
+    @media screen and (max-width: 768px) {
+      margin-top: 50px;
+    }
 
     @media screen and (max-width: 500px) {
       width: 300px;
@@ -260,11 +298,15 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 120px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 768px) {
+      margin-top: 50px;
+    }
 
     @media screen and (max-width: 500px) {
       margin-top: 30px;
