--- a/css/about-us-page.css
+++ b/css/about-us-page.css
@@ -128,6 +128,11 @@ button {
     display: block;
   }
 }
+@media screen and (max-width: 768px) {
+  .header-mobicon {
+    width: 30px;
+  }
+}
 
 .header-links__wrapper {
   position: relative;
@@ -348,7 +353,7 @@ button {
   content: "";
   display: block;
   width: 35px;
-  height: 5px;
+  height: 3px;
   background: #f4c93f;
 }
 .footer-pages__links {
@@ -399,7 +404,7 @@ button {
   content: "";
   display: block;
   width: 35px;
-  height: 5px;
+  height: 3px;
   background: #f4c93f;
 }
 .footer-specialists__links {
@@ -450,7 +455,7 @@ button {
   content: "";
   display: block;
   width: 35px;
-  height: 5px;
+  height: 3px;
   background: #f4c93f;
 }
 .footer-social__links {
@@ -541,7 +546,7 @@ button {
 }
 
 .about {
-  margin-top: 30px;
+  margin-top: 95px;
 }
 @media screen and (max-width: 768px) {
   .about {
@@ -559,57 +564,74 @@ button {
   margin-right: 10px;
 }
 .about-image {
-  width: 90%;
+  width: 75%;
   margin: 20px auto;
 }
 .about-image img {
   width: 100%;
   border-radius: 10px;
 }
-.about-content {
-  margin-top: 50px;
+@media screen and (max-width: 1100px) {
+  .about-image {
+    width: 95%;
+  }
 }
-@media screen and (max-width: 768px) {
+.about-content {
+  margin-top: 115px;
+}
+@media screen and (max-width: 1100px) {
   .about-content {
-    margin-top: 20px;
+    margin-top: 50px;
   }
 }
 .about-content__title {
   color: #000;
   font-family: "Montserrat" sans-serif;
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
 }
+@media screen and (max-width: 1100px) {
+  .about-content__title {
+    font-size: 30px;
+  }
+}
 .about-content__text {
-  margin-top: 30px;
+  margin-top: 50px;
   font-family: "Montserrat" sans-serif;
-  font-size: 18px;
   font-weight: 500;
-  line-height: 25px;
   opacity: 0.8;
+  font-size: 24px;
+  line-height: 38px;
 }
 @media screen and (max-width: 768px) {
   .about-content__text {
     margin-top: 10px;
+    font-size: 18px;
+    line-height: 25px;
   }
 }
 .about-content__image {
-  margin: 30px auto;
+  margin: 90px auto 95px;
   border-radius: 10px;
   display: flex;
   justify-content: center;
 }
 .about-content__image img {
-  width: 70%;
+  width: 85%;
 }
 @media screen and (max-width: 768px) {
   .about-content__image img {
     width: 100%;
   }
 }
+@media screen and (max-width: 1100px) {
+  .about-content__image {
+    margin: 30px;
+  }
+}
 
 .mission {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 @media screen and (max-width: 768px) {
   .mission {
@@ -618,31 +640,43 @@ button {
 }
 .mission-title {
   font-family: "Montserrat" sans-serif;
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
 }
+@media screen and (max-width: 768px) {
+  .mission-title {
+    font-size: 30px;
+  }
+}
 .mission-content {
-  margin-top: 30px;
+  margin-top: 50px;
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: space-between;
 }
+@media screen and (max-width: 1100px) {
+  .mission-content {
+    margin-top: 20px;
+  }
+}
 .mission-content__text {
-  width: 40%;
+  width: 50%;
   font-family: "Montserrat" sans-serif;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 500;
-  line-height: 25px;
+  line-height: 38px;
   opacity: 0.8;
 }
 @media screen and (max-width: 768px) {
   .mission-content__text {
     width: 100%;
+    font-size: 18px;
+    line-height: 25px;
   }
 }
 .mission-content__image {
-  width: 500px;
-  height: 250px;
+  width: 530px;
+  height: 260px;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -656,49 +690,80 @@ button {
 }
 
 .advantages-wrapper {
-  margin-top: 50px;
+  margin-top: 100px;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
 }
 @media screen and (max-width: 768px) {
   .advantages-wrapper {
-    margin-top: 0;
+    margin-top: 30px;
   }
 }
 
 .advantages {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+@media screen and (max-width: 1100px) {
+  .advantages {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 .advantages-title {
   font-family: "Montserrat";
   font-size: 36px;
   font-weight: 700;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
   .advantages-title {
-    font-size: 26px;
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .advantages-title {
+    font-size: 24px;
   }
 }
 .advantages .underline {
   display: block;
-  margin-top: 20px;
-  width: 160px;
+  margin-top: 40px;
+  width: 180px;
   height: 6px;
   background: #f4c93f;
 }
+@media screen and (max-width: 1100px) {
+  .advantages .underline {
+    margin-top: 20px;
+    width: 150px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .advantages .underline {
+    margin-top: 10px;
+    width: 120px;
+  }
+}
 .advantages-text {
-  margin-top: 50px;
+  margin-top: 100px;
   font-family: "Montserrat" sans-serif;
   opacity: 0.8;
   font-size: 24px;
   font-weight: 500;
   line-height: 38px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
   .advantages-text {
     font-size: 20px;
     line-height: 25px;
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .advantages-text {
+    font-size: 16px;
+    line-height: 25px;
+    margin-top: 30px;
   }
 }
 
@@ -708,13 +773,15 @@ button {
   justify-content: space-between;
 }
 .advantages-content .card {
-  margin-top: 50px;
+  margin-top: 120px;
+  margin-bottom: 15px;
   display: flex;
   align-items: center;
 }
 @media screen and (max-width: 768px) {
   .advantages-content .card {
     align-items: start;
+    margin-top: 30px;
   }
 }
 .advantages-content .card-image {
@@ -737,7 +804,7 @@ button {
   height: 48px;
 }
 .advantages-content .card-content {
-  margin-left: 20px;
+  margin-left: 30px;
   width: 450px;
 }
 @media screen and (max-width: 768px) {
@@ -750,6 +817,11 @@ button {
   font-size: 24px;
   font-weight: 700;
 }
+@media screen and (max-width: 768px) {
+  .advantages-content .card-content__title {
+    font-size: 20px;
+  }
+}
 .advantages-content .card-content__text {
   font-family: Montserrat;
   font-size: 16px;
@@ -759,38 +831,41 @@ button {
 @media screen and (max-width: 768px) {
   .advantages-content .card-content__text {
     width: 100%;
-    font-size: 16px;
+    font-size: 14px;
     margin-top: 10px;
     color: rgba(0, 0, 0, 0.5);
   }
 }
 
 .doctor-quote {
-  width: 90%;
-  height: 800px;
+  width: 75%;
+  height: 900px;
   margin: 0 auto;
   background-image: url(../images/about-us/about-image2.png);
   background-size: cover;
   border-radius: 10px;
-  margin-top: 50px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: start;
-  padding: 50px;
+  padding: 50px 50px 100px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
   .doctor-quote {
     padding: 10px;
     height: -moz-fit-content;
     height: fit-content;
+    width: 95%;
+    margin-top: 50px;
   }
 }
 .doctor-quote img {
   height: 40px;
+  margin-bottom: 20px;
 }
 .doctor-quote__text {
-  width: 90%;
+  width: 70%;
   color: #fff;
   font-family: "Montserrat" sans-serif;
   font-weight: 500;
@@ -800,11 +875,14 @@ button {
 @media screen and (max-width: 768px) {
   .doctor-quote__text {
     width: 100%;
+    font-size: 18px;
+    line-height: 25px;
   }
 }
 .doctor-quote__author {
-  margin-top: 20px;
-  color: #fff;
+  margin-top: 40px;
+  margin-bottom: 15px;
+  color: #ffffff;
   font-family: "Montserrat" sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -812,20 +890,36 @@ button {
 }
 
 .gallery {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 80px;
+  margin-bottom: 90px;
+}
+@media screen and (max-width: 1100px) {
+  .gallery {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
 }
 .gallery-title {
   font-family: "Montserrat" sans-serif;
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
 }
+@media screen and (max-width: 768px) {
+  .gallery-title {
+    font-size: 24px;
+  }
+}
 .gallery .place-for-pagination {
-  margin-top: 50px;
+  margin-top: 110px;
   display: flex;
   align-items: center;
   color: #000000;
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .gallery .place-for-pagination {
+    margin-top: 50px;
+  }
 }
 .gallery .place-for-pagination svg path {
   stroke: #000000;
@@ -839,7 +933,7 @@ button {
 }
 .gallery .place-for-pagination .line {
   display: block;
-  width: 200px;
+  width: 300px;
   height: 2px;
   background: #000000;
   margin-left: 15px;
@@ -852,14 +946,20 @@ button {
 }
 
 .gallery-images {
-  margin-top: 50px;
+  margin-top: 100px;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 1100px) {
+  .gallery-images {
+    margin-top: 50px;
+  }
 }
 @media screen and (max-width: 500px) {
   .gallery-images {
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
   }
 }
 .gallery-images .image-wrapper1 {
@@ -925,10 +1025,16 @@ button {
 }
 
 .recomendation-wrapper {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 80px;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
+}
+@media screen and (max-width: 1100px) {
+  .recomendation-wrapper {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .recomendation-title {
@@ -941,20 +1047,32 @@ button {
     font-size: 28px;
   }
 }
+@media screen and (max-width: 500px) {
+  .recomendation-title {
+    font-size: 24px;
+  }
+}
 .recomendation-card {
+  margin-top: 70px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+@media screen and (max-width: 1100px) {
+  .recomendation-card {
+    margin-top: 30px;
+  }
+}
 @media screen and (max-width: 768px) {
   .recomendation-card {
     flex-direction: column;
+    margin-top: 10px;
   }
 }
 .recomendation .card {
-  width: 31%;
+  width: 32%;
   margin-top: 30px;
-  padding: 30px;
+  padding: 30px 30px 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -977,7 +1095,7 @@ button {
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 700;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .recomendation .card-line {
   margin-top: 15px;
@@ -988,7 +1106,8 @@ button {
   background: rgba(0, 0, 0, 0.1);
 }
 .recomendation .card-text {
-  margin-top: 20px;
+  width: 85%;
+  margin-top: 50px;
   text-align: center;
   font-family: "Montserrat" sans-serif;
   font-size: 14px;
@@ -996,11 +1115,16 @@ button {
   line-height: 22px;
 }
 .recomendation .place-for-pagination {
-  margin-top: 50px;
+  margin-top: 100px;
   display: flex;
   align-items: center;
   color: #000000;
   cursor: pointer;
+}
+@media screen and (max-width: 1100px) {
+  .recomendation .place-for-pagination {
+    margin-top: 50px;
+  }
 }
 .recomendation .place-for-pagination svg path {
   stroke: #000000;
@@ -1014,7 +1138,7 @@ button {
 }
 .recomendation .place-for-pagination .line {
   display: block;
-  width: 200px;
+  width: 300px;
   height: 2px;
   background: #000000;
   margin-left: 15px;
