--- a/css/feedback.css
+++ b/css/feedback.css
@@ -128,6 +128,11 @@ button {
     display: block;
   }
 }
+@media screen and (max-width: 768px) {
+  .header-mobicon {
+    width: 30px;
+  }
+}
 
 .header-links__wrapper {
   position: relative;
@@ -348,7 +353,7 @@ button {
   content: "";
   display: block;
   width: 35px;
-  height: 5px;
+  height: 3px;
   background: #f4c93f;
 }
 .footer-pages__links {
@@ -399,7 +404,7 @@ button {
   content: "";
   display: block;
   width: 35px;
-  height: 5px;
+  height: 3px;
   background: #f4c93f;
 }
 .footer-specialists__links {
@@ -450,7 +455,7 @@ button {
   content: "";
   display: block;
   width: 35px;
-  height: 5px;
+  height: 3px;
   background: #f4c93f;
 }
 .footer-social__links {
@@ -541,7 +546,7 @@ button {
 }
 
 .feedback-page__title {
-  margin-top: 30px;
+  margin-top: 90px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
@@ -553,12 +558,16 @@ button {
 }
 
 .feedback {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 40px;
 }
 .feedback-title {
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
+}
+@media screen and (max-width: 768px) {
+  .feedback-title {
+    font-size: 28px;
+  }
 }
 .feedback-cards {
   margin-top: 50px;
@@ -567,6 +576,7 @@ button {
 @media screen and (max-width: 768px) {
   .feedback-cards {
     flex-direction: column;
+    margin-top: 20px;
   }
 }
 .feedback-cards .card-column {
@@ -625,21 +635,37 @@ button {
 }
 
 .form-wrapper {
-  margin-top: 50px;
+  margin-top: 100px;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
 }
+@media screen and (max-width: 768px) {
+  .form-wrapper {
+    margin-top: 50px;
+  }
+}
 
 .form {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+@media screen and (max-width: 768px) {
+  .form {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 .form-title {
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
 }
+@media screen and (max-width: 768px) {
+  .form-title {
+    font-size: 28px;
+  }
+}
 .form-input {
-  margin-top: 50px;
+  margin-top: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -647,10 +673,11 @@ button {
 @media screen and (max-width: 768px) {
   .form-input {
     flex-direction: column;
+    margin-top: 50px;
   }
 }
 .form-input__name {
-  width: 400px;
+  width: 420px;
   height: 40px;
 }
 @media screen and (max-width: 768px) {
@@ -686,6 +713,7 @@ button {
   background: #fff;
   border: none;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
+  font-size: 18px;
 }
 .form-input input::-moz-placeholder {
   opacity: 0.7;
@@ -696,7 +724,7 @@ button {
 .form-comment {
   margin-top: 30px;
   width: 100%;
-  height: 100px;
+  height: 140px;
 }
 .form-comment textarea {
   width: 100%;
@@ -708,6 +736,7 @@ button {
   outline: none;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.2);
   resize: none;
+  font-size: 18px;
 }
 .form-comment textarea::-moz-placeholder {
   opacity: 0.7;
@@ -717,7 +746,12 @@ button {
 }
 .form-button {
   display: flex;
-  margin-top: 30px;
+  margin-top: 50px;
+}
+@media screen and (max-width: 500px) {
+  .form-button {
+    margin-top: 30px;
+  }
 }
 @media screen and (max-width: 500px) {
   .form-button {
@@ -727,7 +761,7 @@ button {
 .form-button__submit button {
   background: #f4c93f;
   border-radius: 10px;
-  padding: 15px 25px;
+  padding: 10px 25px;
   border: none;
   font-weight: 500;
   font-size: 16px;
@@ -744,7 +778,7 @@ button {
   line-height: 20px;
   border: 2px solid #000;
   margin: 0 0 0 20px;
-  padding: 9px 20px;
+  padding: 5px 20px;
 }
 @media screen and (max-width: 500px) {
   .form-button__file {
@@ -765,15 +799,32 @@ button {
 }
 
 .licenses {
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 85px;
+}
+@media screen and (max-width: 768px) {
+  .licenses {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
 .licenses-title {
-  font-size: 25px;
+  font-size: 36px;
+}
+@media screen and (max-width: 768px) {
+  .licenses-title {
+    font-size: 28px;
+  }
 }
 .licenses-content {
   display: flex;
   justify-content: space-between;
-  margin-top: 30px;
+  margin-top: 100px;
+}
+@media screen and (max-width: 768px) {
+  .licenses-content {
+    margin-top: 50px;
+  }
 }
 @media screen and (max-width: 500px) {
   .licenses-content {
@@ -790,11 +841,16 @@ button {
   }
 }
 .licenses .place-for-pagination {
-  margin-top: 50px;
+  margin-top: 120px;
   display: flex;
   align-items: center;
   color: #000000;
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .licenses .place-for-pagination {
+    margin-top: 50px;
+  }
 }
 @media screen and (max-width: 500px) {
   .licenses .place-for-pagination {
