--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -90,6 +90,10 @@
     @media screen and (max-width: 1100px) {
       display: block;
     }
+
+    @media screen and (max-width: 768px) {
+      width: 30px;
+    }
   }
 }
 
@@ -236,4 +240,3 @@
     }
   }
 }
-
