--- a/scss/about-us-page.scss
+++ b/scss/about-us-page.scss
@@ -2,9 +2,8 @@
 @import "header";
 @import "footer";
 
-
 .about {
-  margin-top: 30px;
+  margin-top: 95px;
 
   @media screen and (max-width: 768px) {
     margin-top: 100px;
@@ -23,62 +22,75 @@
   }
 
   &-image {
-    width: 90%;
+    width: 75%;
     margin: 20px auto;
 
     img {
       width: 100%;
       border-radius: 10px;
     }
+
+    @media screen and (max-width: 1100px) {
+      width: 95%;
+    }
   }
 
   &-content {
-    margin-top: 50px;
+    margin-top: 115px;
 
-    @media screen and (max-width: 768px) {
-      margin-top: 20px;
+    @media screen and (max-width: 1100px) {
+      margin-top: 50px;
     }
 
     &__title {
       color: #000;
-
       font-family: "Montserrat" sans-serif;
-      font-size: 32px;
+      font-size: 36px;
       font-weight: 700;
+
+      @media screen and (max-width: 1100px) {
+        font-size: 30px;
+      }
     }
 
     &__text {
-      margin-top: 30px;
+      margin-top: 50px;
       font-family: "Montserrat" sans-serif;
-      font-size: 18px;
       font-weight: 500;
-      line-height: 25px;
       opacity: 0.8;
+      font-size: 24px;
+      line-height: 38px;
 
       @media screen and (max-width: 768px) {
         margin-top: 10px;
+        font-size: 18px;
+        line-height: 25px;
       }
     }
 
     &__image {
-      margin: 30px auto;
+      margin: 90px auto 95px;
       border-radius: 10px;
       display: flex;
       justify-content: center;
 
       img {
-        width: 70%;
+        width: 85%;
 
         @media screen and (max-width: 768px) {
           width: 100%;
         }
+      }
+
+      @media screen and (max-width: 1100px) {
+        margin: 30px;
       }
     }
   }
 }
 
 .mission {
-  margin-top: 50px;
+  margin-top: 100px;
 
   @media screen and (max-width: 768px) {
     margin-top: 30px;
@@ -86,33 +98,43 @@
 
   &-title {
     font-family: "Montserrat" sans-serif;
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 30px;
+    }
   }
 
   &-content {
-    margin-top: 30px;
+    margin-top: 50px;
 
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-between;
 
+    @media screen and (max-width: 1100px) {
+      margin-top: 20px;
+    }
+
     &__text {
-      width: 40%;
+      width: 50%;
       font-family: "Montserrat" sans-serif;
-      font-size: 18px;
+      font-size: 24px;
       font-weight: 500;
-      line-height: 25px;
+      line-height: 38px;
       opacity: 0.8;
 
       @media screen and (max-width: 768px) {
         width: 100%;
+        font-size: 18px;
+        line-height: 25px;
       }
     }
 
     &__image {
-      width: 500px;
-      height: 250px;
+      width: 530px;
+      height: 260px;
 
       display: flex;
       align-items: flex-end;
@@ -133,48 +155,73 @@
 }
 
 .advantages-wrapper {
-  margin-top: 50px;
+  margin-top: 100px;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
 
   @media screen and (max-width: 768px) {
-    margin-top: 0;
+    margin-top: 30px;
   }
 }
 
 .advantages {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  @media screen and (max-width: 1100px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 
   &-title {
     font-family: "Montserrat";
     font-size: 36px;
     font-weight: 700;
 
-    @media screen and (max-width: 768px) {
-      font-size: 26px;
+    @media screen and (max-width: 1100px) {
+      font-size: 30px;
+    }
+
+    @media screen and (max-width: 500px) {
+      font-size: 24px;
     }
   }
 
   .underline {
     display: block;
-    margin-top: 20px;
-    width: 160px;
+    margin-top: 40px;
+    width: 180px;
     height: 6px;
     background: #f4c93f;
+
+    @media screen and (max-width: 1100px) {
+      margin-top: 20px;
+      width: 150px;
+    }
+
+    @media screen and (max-width: 500px) {
+      margin-top: 10px;
+      width: 120px;
+    }
   }
 
   &-text {
-    margin-top: 50px;
+    margin-top: 100px;
     font-family: "Montserrat" sans-serif;
     opacity: 0.8;
     font-size: 24px;
     font-weight: 500;
     line-height: 38px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1100px) {
       font-size: 20px;
       line-height: 25px;
+      margin-top: 30px;
+    }
+    @media screen and (max-width: 500px) {
+      font-size: 16px;
+      line-height: 25px;
+      margin-top: 30px;
     }
   }
 }
@@ -185,12 +232,14 @@
   justify-content: space-between;
 
   .card {
-    margin-top: 50px;
+    margin-top: 120px;
+    margin-bottom: 15px;
     display: flex;
     align-items: center;
 
     @media screen and (max-width: 768px) {
       align-items: start;
+      margin-top: 30px;
     }
 
     &-image {
@@ -214,7 +263,7 @@
     }
 
     &-content {
-      margin-left: 20px;
+      margin-left: 30px;
       width: 450px;
 
       @media screen and (max-width: 768px) {
@@ -225,6 +274,10 @@
         font-family: "Montserrat" sans-serif;
         font-size: 24px;
         font-weight: 700;
+
+        @media screen and (max-width: 768px) {
+          font-size: 20px;
+        }
       }
 
       &__text {
@@ -235,7 +288,7 @@
 
         @media screen and (max-width: 768px) {
           width: 100%;
-          font-size: 16px;
+          font-size: 14px;
           margin-top: 10px;
           color: rgba(0, 0, 0, 0.5);
         }
@@ -245,31 +298,34 @@
 }
 
 .doctor-quote {
-  width: 90%;
-  height: 800px;
+  width: 75%;
+  height: 900px;
   margin: 0 auto;
   background-image: url(../images/about-us/about-image2.png);
   background-size: cover;
   border-radius: 10px;
-  margin-top: 50px;
+  margin-top: 100px;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: start;
-  padding: 50px;
+  padding: 50px 50px 100px;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1100px) {
     padding: 10px;
     height: fit-content;
+    width: 95%;
+    margin-top: 50px;
   }
 
   img {
     height: 40px;
+    margin-bottom: 20px;
   }
 
   &__text {
-    width: 90%;
+    width: 70%;
     color: #fff;
     font-family: "Montserrat" sans-serif;
     font-weight: 500;
@@ -278,12 +334,15 @@
 
     @media screen and (max-width: 768px) {
       width: 100%;
+      font-size: 18px;
+      line-height: 25px;
     }
   }
 
   &__author {
-    margin-top: 20px;
-    color: #fff;
+    margin-top: 40px;
+    margin-bottom: 15px;
+    color: #ffffff;
     font-family: "Montserrat" sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -292,21 +351,34 @@
 }
 
 .gallery {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 80px;
+  margin-bottom: 90px;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
 
   &-title {
     font-family: "Montserrat" sans-serif;
-    font-size: 32px;
+    font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 24px;
+    }
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 110px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 768px) {
+      margin-top: 50px;
+    }
 
     svg path {
       stroke: #000000;
@@ -322,7 +394,7 @@
 
     .line {
       display: block;
-      width: 200px;
+      width: 300px;
       height: 2px;
       background: #000000;
       margin-left: 15px;
@@ -336,13 +408,18 @@
 }
 
 .gallery-images {
-  margin-top: 50px;
+  margin-top: 100px;
   display: flex;
   justify-content: space-between;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 50px;
+  }
 
   @media screen and (max-width: 500px) {
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
   }
 
   .image-wrapper1 {
@@ -410,10 +487,15 @@
 }
 
 .recomendation-wrapper {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 80px;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
+
+  @media screen and (max-width: 1100px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .recomendation {
@@ -422,25 +504,35 @@
     font-size: 36px;
     font-weight: 700;
 
-    @media screen and (max-width:768px){
+    @media screen and (max-width: 768px) {
       font-size: 28px;
+    }
+
+    @media screen and (max-width: 500px) {
+      font-size: 24px;
     }
   }
 
   &-card {
+    margin-top: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
+    @media screen and (max-width: 1100px) {
+      margin-top: 30px;
+    }
+
     @media screen and (max-width: 768px) {
       flex-direction: column;
+      margin-top: 10px;
     }
   }
 
   .card {
-    width: 31%;
+    width: 32%;
     margin-top: 30px;
-    padding: 30px;
+    padding: 30px 30px 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -461,7 +553,7 @@
       font-family: "Montserrat" sans-serif;
       font-size: 16px;
       font-weight: 700;
-      margin-top: 10px;
+      margin-top: 20px;
     }
 
     &-line {
@@ -474,7 +566,8 @@
     }
 
     &-text {
-      margin-top: 20px;
+      width: 85%;
+      margin-top: 50px;
       text-align: center;
       font-family: "Montserrat" sans-serif;
       font-size: 14px;
@@ -484,11 +577,15 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 100px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 1100px) {
+      margin-top: 50px;
+    }
 
     svg path {
       stroke: #000000;
@@ -504,7 +601,7 @@
 
     .line {
       display: block;
-      width: 200px;
+      width: 300px;
       height: 2px;
       background: #000000;
       margin-left: 15px;
