--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -3,7 +3,7 @@
 @import "footer";
 
 .contact-page__title {
-  margin-top: 30px;
+  margin-top: 100px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
@@ -17,12 +17,11 @@
   @media screen and (max-width: 768px) {
     margin-top: 120px;
   }
-
 }
 
 .contact-map {
   position: relative;
-  margin-top: 100px;
+  margin-top: 120px;
 
   @media screen and (max-width: 768px) {
     margin-top: 30px;
@@ -32,51 +31,58 @@
     transform: scale(0);
     transition: all 1s ease;
 
-    @media screen and (max-width: 500px) {
-      transform: translateY(80px) scale(1);
+    @media screen and (max-width: 768px) {
+      transform: translateY(120px) scale(1);
     }
   }
 
   &:hover .contact-map__card {
     transform: translateY(-450px) scale(1);
+
+    @media screen and (max-width: 768px) {
+      transform: translateY(120px) scale(1);
+    }
   }
 }
 
 .contact-map__card .card {
   position: absolute;
-  top: -50px;
+  top: -90px;
   left: 50px;
   width: 495px;
-  height: 550px;
+  height: 625px;
   border-radius: 10px;
   background: #fff;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.15);
-  padding: 50px;
+  padding: 30px 50px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   transition: all 0.5s ease-in-out;
 
   @media screen and (max-width: 768px) {
-    left: 20px;
-    width: 400px;
+    left: 0;
+    width: 100%;
+    height: 350px;
+    padding: 15px 20px;
   }
   @media screen and (max-width: 500px) {
     position: relative;
     width: 100%;
     left: 0;
     padding: 20px;
-    height: 400px;
+  }
+
+  &-title {
+    font-family: "Montserrat";
+    font-size: 24px;
+    font-weight: 700;
   }
 
   &-text {
     font-size: 20px;
     font-weight: 500;
-
-    svg {
-      margin-right: 10px;
-    }
   }
 
   &-social {
@@ -91,44 +97,64 @@
 }
 
 .contact {
-  margin-top: 100px;
-  margin-bottom: 50px;
+  margin-top: 185px;
+  margin-bottom: 110px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 
   @media screen and (max-width: 768px) {
     flex-direction: column;
+    margin-top: 420px;
+    margin-bottom: 50px;
+  }
+
+  @media screen and (max-width: 500px) {
+    margin-top: 70px;
   }
 
   &-section {
     @media screen and (max-width: 1100px) {
       margin-bottom: 20px;
     }
+
     &__title {
-      font-size: 25px;
-      margin-bottom: 20px;
+      font-family: "Montserrat" sans-serif;
+      font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 25px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 28px;
+      }
     }
 
     &__text {
       width: 80%;
-      font-size: 16px;
+      font-size: 24px;
       font-weight: 500;
-      line-height: 25px;
+      line-height: 38px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 18px;
+        line-height: 25px;
+      }
     }
 
     &__inform {
-      display: flex;
-      margin-top: 30px;
+      width: 80%;
+      margin-top: 100px;
       display: flex;
       justify-content: space-between;
 
       @media screen and (max-width: 1100px) {
         flex-direction: column;
+        margin-top: 50px;
       }
 
       @media screen and (max-width: 768px) {
         flex-direction: row;
         margin-bottom: 20px;
+        margin-top: 30px;
       }
 
       @media screen and (max-width: 500px) {
@@ -138,11 +164,12 @@
       .inform-title {
         font-size: 20px;
         font-weight: 700;
+        margin-top: 10px;
         margin-bottom: 20px;
       }
 
       .inform-text {
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 500;
         margin-top: 5px;
       }
@@ -152,9 +179,9 @@
         flex-direction: column;
 
         a {
-          margin-bottom: 5px;
+          margin-bottom: 10px;
 
-          &:hover{
+          &:hover {
             color: #01a1b7;
           }
         }
@@ -162,12 +189,17 @@
     }
 
     &__numbers {
-      margin-top: 30px;
+      margin-top: 60px;
 
       h1 {
         font-size: 24px;
         font-weight: 700;
         margin-top: 10px;
+
+        svg {
+          width: 24px;
+          height: 24px;
+        }
 
         @media screen and (max-width: 500px) {
           font-size: 20px;
@@ -177,7 +209,7 @@
   }
 
   &-form {
-    width: 40%;
+    width: 52%;
     padding: 40px;
     border-radius: 10px;
     background: rgba(197, 198, 198, 0.2);
@@ -192,22 +224,32 @@
     }
 
     &__title {
-      font-size: 24px;
+      font-family: "Montserrat";
+      font-size: 36px;
+      font-weight: 700;
+
+      @media screen and (max-width: 768px) {
+        font-size: 28px;
+      }
+    }
+
+    form {
+      margin-top: 50px;
     }
 
     .form-input {
       display: flex;
       flex-direction: column;
-      height: 70px;
-      margin-top: 20px;
+      margin-bottom: 20px;
 
       input {
         border: none;
         border-radius: 5px;
         padding: 5px 10px;
         outline: none;
-        height: 100%;
-        margin-top: 10px;
+        height: 56px;
+        margin-top: 15px;
+        font-size: 18px;
 
         &::placeholder {
           opacity: 0.7;
@@ -216,12 +258,12 @@
     }
 
     label {
-      font-size: 18px;
+      font-size: 20px;
       font-weight: 700;
     }
 
     .form-message {
-      height: 150px;
+      height: 210px;
 
       textarea {
         width: 100%;
@@ -232,21 +274,22 @@
         padding: 15px;
         outline: none;
         resize: none;
+        font-size: 20px;
       }
     }
 
     .form-buttons {
       display: flex;
       justify-content: space-between;
-      margin-top: 30px;
+      margin-top: 20px;
 
       @media screen and (max-width: 500px) {
         flex-direction: column;
       }
 
       .submit {
-        width: 50%;
-        font-size: 18px;
+        font-size: 20px;
+        padding: 15px 80px;
         font-weight: 700;
         border: none;
         border-radius: 10px;
@@ -254,7 +297,7 @@
         color: #ffffff;
         transition: 0.5s;
 
-        &:hover{
+        &:hover {
           background: #2f00ff;
         }
 
@@ -267,8 +310,7 @@
 
       .form-file {
         border: 2px solid #000;
-        padding: 5px;
-        font-size: 12px;
+        padding: 5px 20px;
         border-radius: 10px;
 
         @media screen and (max-width: 500px) {
@@ -277,7 +319,7 @@
         }
 
         label {
-          font-size: 16px;
+          font-size: 20px;
           font-weight: 700;
         }
 
