--- a/scss/diagnostics.scss
+++ b/scss/diagnostics.scss
@@ -3,7 +3,7 @@
 @import "footer";
 
 .diagnostics-page__title {
-  margin-top: 30px;
+  margin-top: 90px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
@@ -16,27 +16,36 @@
 }
 
 .diagnostics {
-  margin-top: 50px;
+  margin-top: 40px;
 
-  &title {
-    font-size: 32px;
+  &-title {
+    font-size: 36px;
     font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 30px;
+    }
   }
 
   .inform {
+    height: 454px;
     position: relative;
-    margin-top: 100px;
+    margin-top: 140px;
     border-radius: 20px;
     background: #01a1b7;
     display: flex;
-    justify-content: space-between;
-    padding: 30px 20px 0;
+    padding: 30px 15px 0;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1100px) {
       margin-top: 30px;
+      height: fit-content;
+      padding: 20px 10px;
     }
 
     &-image {
+      width: 547px;
+      height: 390px;
+
       img {
         height: 110%;
         position: absolute;
@@ -53,7 +62,8 @@
     }
 
     &-content {
-      width: 50%;
+      width: 55%;
+      margin-left: 10px;
       padding-bottom: 50px;
 
       @media screen and (max-width: 1100px) {
@@ -61,15 +71,19 @@
       }
 
       &__title {
-        font-size: 28px;
+        font-size: 36px;
         font-weight: 700;
         color: #ffffff;
+
+        @media screen and (max-width: 768px) {
+          font-size: 30px;
+        }
       }
 
       &__text {
-        width: 70%;
+        width: 90%;
         margin-top: 20px;
-        font-size: 18px;
+        font-size: 24px;
         font-weight: 500;
         line-height: 38px;
         color: #ffffff;
@@ -77,6 +91,10 @@
 
         @media screen and (max-width: 1100px) {
           width: 100%;
+        }
+
+        @media screen and (max-width: 768px) {
+          font-size: 18px;
         }
       }
     }
@@ -94,6 +112,7 @@
 
   .equipment-item {
     width: 49%;
+
     margin-top: 30px;
     border-radius: 10px;
 
@@ -103,10 +122,10 @@
 
     &__image {
       position: relative;
-      height: 450px;
+      height: 518px;
       text-align: center;
       background-color: #c5c6c6;
-      padding: 20px;
+      padding: 30px;
       border-radius: 10px;
 
       @media screen and (max-width: 100px) {
@@ -129,8 +148,8 @@
 
       &--title {
         position: absolute;
-        bottom: 20px;
-        font-size: 22px;
+        bottom: 30px;
+        font-size: 24px;
         font-weight: 700;
       }
 
@@ -140,25 +159,28 @@
     }
 
     &__text {
+      width: 95%;
       margin-top: 30px;
+      font-family: "Montserrat";
       font-size: 14px;
       font-weight: 500;
-      line-height: 25px;
+      line-height: 30px;
     }
   }
 }
 
 .licenses {
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 95px;
 
   &-title {
-    font-size: 25px;
+    font-size: 36px;
   }
 
   &-content {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 100px;
 
     @media screen and (max-width: 500px) {
       width: 300px;
@@ -175,7 +197,7 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 110px;
     display: flex;
     align-items: center;
     color: #000000;
@@ -211,10 +233,20 @@
 // diagnostics-inner.html styles//
 
 .information {
-  margin-top: 30px;
+  margin-top: 40px;
 
-  @media screen and (max-width: 768px) {
-    margin-top: 80px;
+  @media screen and (max-width: 500px) {
+    margin-top: 20px;
+  }
+
+  &-title {
+    font-family: "Montserrat";
+    font-size: 36px;
+    font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-text {
@@ -226,15 +258,24 @@
       flex-direction: column;
     }
 
+    @media screen and (max-width: 768px) {
+      margin-top: 20px;
+    }
+
     p {
-      width: 50%;
-      font-size: 20px;
+      width: 55%;
+      font-size: 24px;
       font-weight: 500;
-      line-height: 34px;
+      line-height: 38px;
       opacity: 0.5;
 
       @media screen and (max-width: 1100px) {
         width: 100%;
+      }
+
+      @media screen and (max-width: 768px) {
+        font-size: 18px;
+        line-height: 30px;
       }
     }
 
@@ -247,8 +288,7 @@
 }
 
 .information-box {
-  margin-top: 100px;
-  padding: 30px;
+  margin-top: 85px;
 
   @media screen and (max-width: 768px) {
     margin-top: 30px;
@@ -258,7 +298,7 @@
 
 .open {
   .accordion-content {
-    margin-top: 30px;
+    margin-top: 25px;
     height: fit-content;
 
     @media screen and (max-width: 768px) {
@@ -273,9 +313,12 @@
 }
 
 .accordion {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 3px solid #c7c7c7;
+  padding: 20px 0;
+  border-bottom: 1px solid #c7c7c7;
+
+  @media screen and (max-width: 1100px) {
+    padding: 10px 0;
+  }
 
   &-header {
     display: flex;
@@ -285,16 +328,18 @@
 
     &__title {
       position: relative;
-      padding-left: 40px;
-      font-size: 28px;
+      padding-left: 35px;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 38px;
 
       @media screen and (max-width: 768px) {
-        font-size: 24px;
+        font-size: 20px;
       }
 
       &::before {
         position: absolute;
-        left: 20px;
+        left: 15px;
         top: 40%;
         content: "";
         width: 7px;
@@ -309,7 +354,6 @@
     }
 
     &__icon {
-      margin: 0 20px;
       position: relative;
 
       color: #01a1b7;
@@ -324,22 +368,37 @@
         align-items: center;
         font-size: 24px;
         justify-content: center;
-        
 
-        .plus{
+        @media screen and (max-width: 768px) {
+          width: 30px;
+          height: 30px;
+          border: 2px solid #01a1b7;
+        }
+
+        .plus {
           position: absolute;
           width: 4px;
           height: 20px;
           border-radius: 5px;
           background: #01a1b7;
           transition: all 0.5s linear;
+
+          @media screen and (max-width: 768px) {
+            width: 3px;
+            height: 15px;
+          }
         }
 
-        .minus{
+        .minus {
           width: 20px;
           height: 4px;
           border-radius: 5px;
           background: #01a1b7;
+
+          @media screen and (max-width: 768px) {
+            width: 15px;
+            height: 3px;
+          }
         }
       }
     }
@@ -381,21 +440,31 @@
 }
 
 .tool {
-  margin-top: 100px;
+  margin-top: 102px;
   margin-bottom: 100px;
 
   @media screen and (max-width: 768px) {
-    margin-top: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  &-title {
+    font-size: 36px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   .items-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 100px;
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
+      margin-top: 50px;
     }
 
     .item {
@@ -415,9 +484,14 @@
       }
 
       &-image {
-        width: 100%;
-        height: 300px;
-        text-align: center;
+        height: 325px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @media screen and (max-width: 768px) {
+          height: 250px;
+        }
 
         img {
           width: 70%;
@@ -431,7 +505,7 @@
 
       &-title {
         width: fit-content;
-        padding: 10px 25px;
+        padding: 7px 30px;
         transform: translateX(-30px);
         color: #ffffff;
         background: #01a1b7;
@@ -439,12 +513,25 @@
       }
 
       &-facts {
-        margin-top: 30px;
+        margin-top: 50px;
         position: relative;
         padding-left: 15px;
 
+        @media screen and (max-width: 768px) {
+          margin-top: 30px;
+        }
+
         li {
-          margin-top: 10px;
+          margin-top: 20px;
+          font-family: "Montserrat";
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 20px;
+
+          @media screen and (max-width: 768px) {
+            font-size: 14px;
+            margin-top: 10px;
+          }
         }
 
         li::before {
@@ -453,8 +540,8 @@
           margin-top: 5px;
           transform: translateX(-20px);
           content: "";
-          width: 10px;
-          height: 10px;
+          width: 8px;
+          height: 8px;
           border-radius: 50%;
           background: #01a1b7;
         }
@@ -463,11 +550,15 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 95px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 768px) {
+      margin-top: 20px;
+    }
 
     svg path {
       stroke: #000000;
