--- a/scss/labaratory.scss
+++ b/scss/labaratory.scss
@@ -3,12 +3,16 @@
 @import "footer";
 
 .labaratory-page__title {
-  margin-top: 30px;
+  margin-top: 90px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 100px;
+  }
 
   img {
     margin-right: 10px;
@@ -16,18 +20,25 @@
 }
 
 .labaratory {
-  margin-top: 50px;
+  margin-top: 35px;
+
+  &-title {
+    font-family: "Montserrat";
+    font-size: 36px;
+    font-weight: 700;
+  }
 
   &-content {
-    margin-top: 30px;
+    margin-top: 100px;
     display: flex;
 
     @media screen and (max-width: 1100px) {
       flex-direction: column;
+      margin-top: 30px;
     }
 
     &__video {
-      width: 60%;
+      width: 50%;
 
       @media screen and (max-width: 1100px) {
         width: 100%;
@@ -35,9 +46,9 @@
     }
 
     &__text {
-      width: 40%;
-      padding: 10px;
-      margin-left: 20px;
+      width: 50%;
+      padding: 5px;
+      margin-left: 10px;
 
       @media screen and (max-width: 1100px) {
         width: 100%;
@@ -64,13 +75,17 @@
   position: relative;
   width: 100%;
   background: rgba(197, 198, 198, 0.1);
-  margin-top: 50px;
+  margin-top: 100px;
   padding-bottom: 50px;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 50px;
+  }
 
   .analysis-image {
     position: absolute;
     right: 0;
-    top: 250px;
+    top: 420px;
     z-index: -1;
     display: flex;
     justify-content: flex-end;
@@ -80,13 +95,27 @@
     }
 
     img {
-      width: 80%;
+      width: 100%;
     }
   }
 }
 
 .analysis {
-  padding-top: 50px;
+  padding-top: 100px;
+
+  @media screen and (max-width: 1100px) {
+    padding-top: 50px;
+  }
+
+  &-title {
+    font-family: "Montserrat";
+    font-size: 36px;
+    font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
+  }
 
   &-types {
     display: flex;
@@ -109,12 +138,20 @@
       }
 
       li {
-        font-size: 16px;
+        margin-bottom: 15px;
+        font-family: "Montserrat";
+        font-size: 20px;
         font-weight: 500;
-        line-height: 37px;
-        opacity: 0.5;
+        line-height: 36.5px;
         text-transform: uppercase;
+
+        opacity: 0.5;
         transition: all 0.5s ease-in-out;
+
+        @media screen and (max-width: 768px) {
+          margin-bottom: 0;
+          font-size: 16px;
+        }
 
         &:hover {
           opacity: 1;
@@ -126,16 +163,31 @@
 }
 
 .licenses {
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 90px;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 
   &-title {
-    font-size: 25px;
+    font-size: 36px;
+
+    @media screen and (max-width: 768px) {
+      width: 3px;
+      height: 15px;
+    }
   }
 
   &-content {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 100px;
+
+    @media screen and (max-width: 1100px) {
+      margin-top: 50px;
+    }
 
     @media screen and (max-width: 500px) {
       width: 300px;
@@ -152,11 +204,15 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 110px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 11000px) {
+      margin-top: 50px;
+    }
 
     @media screen and (max-width: 500px) {
       margin-top: 30px;
@@ -188,13 +244,32 @@
 // labaratory-inner.html styles//
 
 .analysis-description {
-  margin-top: 50px;
+  margin-top: 110px;
+
+  @media screen and (max-width: 1100px) {
+    margin-top: 50px;
+  }
+
+  .description-title {
+    font-family: "Montserrat";
+    font-size: 36px;
+    font-weight: 700;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
+  }
 
   .description-text {
     margin-top: 30px;
-    font-size: 18px;
+    font-size: 20px;
     line-height: 30px;
     font-weight: 500;
+    padding: 10px;
+
+    @media screen and (max-width: 500px) {
+      font-size: 16px;
+    }
   }
 }
 
@@ -218,9 +293,11 @@
 }
 
 .accordion-wrapper {
-  margin-top: 50px;
+  margin-top: 90px;
+  margin-bottom: 100px;
 
   @media screen and (max-width: 768px) {
+    margin-top: 50px;
     padding: 0;
     margin-bottom: 30px;
   }
@@ -228,9 +305,8 @@
 
 .accordion {
   margin-bottom: 30px;
-  padding: 10px;
-  border-top: 3px solid #c7c7c7;
-  border-bottom: 3px solid #c7c7c7;
+  border-top: 1px solid #c7c7c7;
+  border-bottom: 1px solid #c7c7c7;
 
   @media screen and (max-width: 768px) {
     margin-bottom: 15px;
@@ -241,11 +317,16 @@
     justify-content: space-between;
     align-items: flex-start;
     cursor: pointer;
-    padding: 10px 0;
+    padding: 20px 0 10px;
+
+    @media screen and (max-width: 768px) {
+      padding: 10px 0;
+    }
 
     &__title {
       margin-right: auto;
-      font-size: 26px;
+      font-size: 24px;
+      font-weight: 700;
 
       @media screen and (max-width: 768px) {
         font-size: 20px;
@@ -253,8 +334,9 @@
     }
 
     h2 {
-      font-size: 28px;
+      font-size: 24px;
       margin-right: 36px;
+      font-weight: 700;
 
       @media screen and (max-width: 768px) {
         font-size: 18px;
@@ -281,6 +363,12 @@
         font-size: 24px;
         justify-content: center;
 
+        @media screen and (max-width: 768px) {
+          width: 30px;
+          height: 30px;
+          border: 2px solid #01a1b7;
+        }
+
         .plus {
           position: absolute;
           width: 4px;
@@ -288,6 +376,11 @@
           border-radius: 5px;
           background: #01a1b7;
           transition: all 0.5s linear;
+
+          @media screen and (max-width: 768px) {
+            width: 3px;
+            height: 15px;
+          }
         }
 
         .minus {
@@ -295,6 +388,11 @@
           height: 4px;
           border-radius: 5px;
           background: #01a1b7;
+
+          @media screen and (max-width: 768px) {
+            width: 15px;
+            height: 3px;
+          }
         }
       }
     }
@@ -305,8 +403,7 @@
     overflow: hidden;
     transition: all 0.5s ease;
     height: 0;
-    width: 80%;
-    padding: 0 10px 0;
+    width: 55%;
 
     @media screen and (max-width: 768px) {
       width: 100%;
@@ -316,9 +413,9 @@
       width: 100%;
       font-size: 16px;
       font-weight: 500;
-      line-height: 31px;
+      line-height: 20px;
+      margin-bottom: 20px;
       opacity: 0.8;
     }
   }
 }
-
