--- a/scss/sales.scss
+++ b/scss/sales.scss
@@ -3,20 +3,24 @@
 @import "footer";
 
 .sales-page__title {
-  margin-top: 50px;
+  margin-top: 95px;
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   font-family: "Montserrat" sans-serif;
   font-size: 16px;
   font-weight: 500;
 
   img {
     margin-right: 10px;
-    margin-bottom: 30px;
+    display: inline;
   }
 
-  h1 {
-    margin-top: 50px;
+  .page-title {
+    margin-top: 30px;
+    font-size: 36px;
+    font-family: "Montserrat" sans-serif;
+    font-weight: 700;
   }
 }
 
@@ -27,10 +31,15 @@
 
 .sales-main {
   display: flex;
-  padding: 30px 0 0;
-  margin-top: 30px;
+  padding: 30px 0 40px;
+  margin-top: 50px;
+
+  @media screen and (max-width: 768px) {
+    padding: 20px 0;
+  }
 
   .main-content {
+    margin-top: 70px;
     width: 60%;
     color: #ffffff;
     display: flex;
@@ -40,22 +49,28 @@
 
     @media screen and (max-width: 1100px) {
       width: 100%;
+      margin-top: 0;
+      padding-bottom: 0;
     }
 
     &__title {
-      width: 85%;
-      font-size: 28px;
+      font-size: 36px;
       font-weight: 700;
       line-height: 57px;
 
       @media screen and (max-width: 1100px) {
         width: 100%;
       }
+
+      @media screen and (max-width: 768px) {
+        font-size: 28px;
+        line-height: 40px;
+      }
     }
 
     &__text {
-      width: 70%;
-      font-size: 20px;
+      width: 80%;
+      font-size: 24px;
       font-weight: 500;
       line-height: 38px;
       margin-bottom: auto;
@@ -65,10 +80,15 @@
       @media screen and (max-width: 1100px) {
         width: 100%;
       }
+
+      @media screen and (max-width: 1100px) {
+        font-size: 18px;
+        line-height: 25px;
+      }
     }
 
     .place-for-pagination {
-      margin-bottom: 50px;
+      margin-bottom: 20px;
       display: flex;
       align-items: center;
       color: #ffffff;
@@ -84,7 +104,7 @@
 
       .line {
         display: block;
-        width: 200px;
+        width: 300px;
         height: 3px;
         background: #ffffff;
         margin-left: 15px;
@@ -94,6 +114,8 @@
   }
 
   &__image {
+    margin-left: 130px;
+    transform: translateY(40px);
     background-image: radial-gradient(#ffffff, #ffffff, #01a1b7, #01a1b7);
 
     @media screen and (max-width: 1100px) {
@@ -108,8 +130,12 @@
 }
 
 .sales-cards {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 40px;
+  padding-bottom: 95px;
+
+  @media screen and (max-width: 768px) {
+    padding-bottom: 50px;
+  }
 
   .filter-buttons {
     display: flex;
@@ -121,14 +147,14 @@
       border-radius: 10px;
       border: 3px solid rgba(0, 0, 0, 0.2);
       background: transparent;
-      margin-right: 10px;
+      margin-right: 20px;
       margin-top: 15px;
       font-size: 18px;
       font-weight: 600;
       line-height: 22px;
       color: rgba(0, 0, 0, 0.6);
 
-      @media screen and (max-width: 500px) {
+      @media screen and (max-width: 768px) {
         font-size: 16px;
         padding: 5px 10px;
       }
@@ -142,11 +168,15 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 80px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
+
+    @media screen and (max-width: 768px) {
+      margin-top: 30px;
+    }
 
     svg path {
       stroke: #000000;
@@ -162,7 +192,7 @@
 
     .line {
       display: block;
-      width: 200px;
+      width: 300px;
       height: 2px;
       background: #000000;
       margin-left: 15px;
@@ -176,7 +206,7 @@
 }
 
 .cards-wrapper {
-  margin-top: 30px;
+  margin-top: 20px;
 
   display: flex;
   justify-content: space-between;
@@ -189,12 +219,15 @@
   .card {
     margin-top: 30px;
     width: 49%;
+    height: 555px;
+
     background: #ffffff;
     border-radius: 10px;
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
 
     @media screen and (max-width: 768px) {
       width: 80%;
+      height: fit-content;
     }
 
     @media screen and (max-width: 500px) {
@@ -210,7 +243,7 @@
     }
 
     &-title {
-      padding: 30px 40px 0;
+      padding: 20px 40px 0;
       display: flex;
       justify-content: space-between;
 
@@ -222,12 +255,14 @@
       }
 
       &__title {
-        width: 70%;
-        font-size: 20px;
+        font-family: "Montserrat" sans-serif;
+        font-size: 24px;
         font-weight: 700;
+        line-height: 32px;
 
-        @media screen and (max-width: 500px) {
+        @media screen and (max-width: 768px) {
           font-size: 16px;
+          line-height: 25px;
         }
       }
 
@@ -250,7 +285,10 @@
     &-text {
       padding: 0 40px 30px;
       opacity: 0.6;
-      font-weight: 600;
+      font-family: "Montserrat";
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 22px;
 
       @media screen and (max-width: 1100px) {
         padding: 0 20px 10px;
@@ -261,7 +299,7 @@
       }
 
       p {
-        margin-top: 30px;
+        margin-top: 20px;
 
         @media screen and (max-width: 768px) {
           margin-top: 20px;
@@ -269,6 +307,7 @@
       }
 
       .color-blue {
+        bottom: 0;
         color: #3e91dd;
       }
     }
@@ -276,16 +315,30 @@
 }
 
 .licenses {
-  margin-top: 50px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+
+  @media screen and (max-width: 768px) {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 
   &-title {
-    font-size: 25px;
+    font-size: 36px;
+
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
   }
 
   &-content {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 100px;
+
+    @media screen and (max-width: 500px) {
+      margin-top: 50px;
+    }
 
     @media screen and (max-width: 500px) {
       width: 300px;
@@ -302,13 +355,13 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 100px;
     display: flex;
     align-items: center;
     color: #000000;
     cursor: pointer;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 768px) {
       margin-top: 30px;
     }
 
