--- a/scss/services.scss
+++ b/scss/services.scss
@@ -3,7 +3,7 @@
 @import "footer";
 
 .services-page__title {
-  margin-top: 30px;
+  margin-top: 100px;
   display: flex;
   align-items: flex-start;
   font-family: "Montserrat" sans-serif;
@@ -18,23 +18,42 @@
 .information {
   margin-top: 30px;
 
+  &-title {
+    font-family: "Montserrat";
+    font-size: 36px;
+    font-weight: 700;
+
+    @media screen and (max-width: 1100px) {
+      font-size: 30px;
+    }
+  }
+
   &-text {
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
 
     p {
-      font-size: 20px;
+      font-family: "Montserrat";
+      font-size: 24px;
       font-weight: 500;
-      line-height: 34px;
+      line-height: 38px;
       opacity: 0.5;
+
+      @media screen and (max-width: 1100px) {
+        font-size: 20px;
+        line-height: 30px;
+      }
+      @media screen and (max-width: 500px) {
+        font-size: 16px;
+        line-height: 25px;
+      }
     }
   }
 }
 
 .information-box {
-  margin-top: 100px;
-  padding: 30px;
+  margin-top: 10px;
 
   @media screen and (max-width: 768px) {
     padding: 0;
@@ -42,7 +61,7 @@
 
   .open {
     .accordion-content {
-      margin-top: 20px;
+      margin-top: 30px;
       height: fit-content;
 
       @media screen and (max-width: 768px) {
@@ -58,9 +77,12 @@
 }
 
 .accordion {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 3px solid #c7c7c7;
+  padding: 20px 0;
+  border-bottom: 1px solid #c7c7c7;
+
+  @media screen and (max-width: 768px) {
+    padding: 10px 0;
+  }
 
   &-header {
     display: flex;
@@ -69,13 +91,23 @@
     cursor: pointer;
 
     &__title {
+      width: 55%;
       position: relative;
       padding-left: 40px;
-      font-size: 28px;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 38px;
 
-      @media screen and (max-width: 768px) {
-        font-size: 24px;
-        padding-left: 20px;
+      @media screen and (max-width: 1100px) {
+        width: 90%;
+        font-size: 20px;
+        line-height: 30px;
+        padding-left: 30px;
+      }
+
+      @media screen and (max-width: 500px) {
+        font-size: 18px;
+        line-height: 25px;
       }
 
       &::before {
@@ -88,14 +120,13 @@
         background: #000000;
         border-radius: 50%;
 
-        @media screen and (max-width: 768px) {
-          left: 0;
+        @media screen and (max-width: 1100px) {
+          left: 10px;
         }
       }
     }
 
     &__icon {
-      margin: 0 20px;
       position: relative;
       color: #01a1b7;
 
@@ -110,6 +141,12 @@
         font-size: 24px;
         justify-content: center;
 
+        @media screen and (max-width: 768px) {
+          width: 30px;
+          height: 30px;
+          border: 2px solid #01a1b7;
+        }
+
         .plus {
           position: absolute;
           width: 4px;
@@ -117,6 +154,11 @@
           border-radius: 5px;
           background: #01a1b7;
           transition: all 0.5s linear;
+
+          @media screen and (max-width: 768px) {
+            width: 3px;
+            height: 15px;
+          }
         }
 
         .minus {
@@ -124,6 +166,11 @@
           height: 4px;
           border-radius: 5px;
           background: #01a1b7;
+
+          @media screen and (max-width: 768px) {
+            width: 15px;
+            height: 3px;
+          }
         }
       }
     }
@@ -144,7 +191,6 @@
     }
 
     p {
-      width: 90%;
       font-size: 16px;
       font-weight: 500;
       line-height: 31px;
@@ -152,6 +198,8 @@
 
       @media screen and (max-width: 768px) {
         width: 100%;
+        font-size: 14px;
+        line-height: 25px;
       }
     }
 
@@ -166,9 +214,21 @@
   margin-top: 100px;
   margin-bottom: 100px;
 
+  @media screen and (max-width: 1100px) {
+    margin-top: 50px;
+  }
+
   &-title {
+    font-family: "Montserrat";
+    font-size: 36px;
+    font-weight: 700;
+
+    @media screen and (max-width: 1100px) {
+      font-size: 30px;
+    }
+
     @media screen and (max-width: 500px) {
-      font-size: 25px;
+      font-size: 24px;
     }
   }
 
@@ -176,11 +236,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 100px;
     flex-wrap: wrap;
 
     @media screen and (max-width: 1100px) {
       flex-direction: column;
+      margin-top: 50px;
     }
 
     .item {
@@ -191,7 +252,7 @@
       box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.08);
 
       @media screen and (max-width: 1100px) {
-        width: 50%;
+        width: 70%;
         margin-bottom: 30px;
       }
 
@@ -206,15 +267,15 @@
 
       &-image {
         width: 100%;
-        height: 300px;
+        height: 325px;
         text-align: center;
 
         img {
           width: 70%;
-          height: 70%;
+          height: 100%;
 
           @media screen and (max-width: 500px) {
-            height: 50%;
+            height: 90%;
           }
 
           &:last-child {
@@ -225,20 +286,26 @@
 
       &-title {
         width: fit-content;
-        padding: 10px 25px;
+        padding: 10px 20px;
         transform: translateX(-30px);
         color: #ffffff;
         background: #01a1b7;
         border-radius: 0 15px 15px 0;
+        font-family: "Montserrat";
+        font-size: 20px;
+        font-weight: 700;
       }
 
       &-facts {
-        margin-top: 30px;
+        margin-top: 50px;
         position: relative;
-        padding-left: 15px;
+        padding-left: 20px;
+        font-family: "Montserrat";
+        font-size: 16px;
+        font-weight: 500;
 
         li {
-          margin-top: 10px;
+          margin-bottom: 22px;
         }
 
         li::before {
@@ -247,8 +314,8 @@
           margin-top: 5px;
           transform: translateX(-20px);
           content: "";
-          width: 10px;
-          height: 10px;
+          width: 8px;
+          height: 8px;
           border-radius: 50%;
           background: #01a1b7;
         }
@@ -257,7 +324,7 @@
   }
 
   .place-for-pagination {
-    margin-top: 50px;
+    margin-top: 70px;
     display: flex;
     align-items: center;
     color: #000000;
